- Feature: Render tables as ASCII tables
- Feature: Support math elements (SVG images transcoded on the fly as PNG)
- Feature: Use the 2x image for better resolution
- Feature: Include video links in Image gallery
- Feature: Show an image for video media using poster attribute
- Fix: Better support for nested tables
- Fix: Skip audio pronunciation links
- Fix: Skip pronunciation helper links
- Create separate page for reference links, include specific link for each section to show links for that section
- Feature: show count for reference links per section, and for all references 
- Feature: support SUP tag
- Fix: remove meta data text (e.g. "Citation needed" and "original research" text/links)
- Fix: Only display 1 format for geo coordinates
- Feature: PDF for article
- Fix: Link to original article on Wikipedia (needed underscore escaping)
- Fix Table padding bug (Zero Width space characters!) - German submarine U-48 (1939)
- Fix: Tables don't support Row spans
- Fix: Collect reference links from table captions
- Fix: Navigation suggestions not rendered if more than 1 hyperlink in a sentence
- Fix: attempt to support tables with malformed colspan/rowspan values (iPod article)
- Fix: properly render tables with incorrect/excessive colspan values (iPod article)
- Feature: Support timelines (extract the image, properly extract article links from MAP tag)
- Fix: exclude navigation sections from section's references
- Fix: exclude fragement from article title when collecting references
- Feature: Speed up views with Disk cache for Wikipedia content
    (especially important for sub-pages like gallery, references, since that needs would refetch article JSON)
- Feature: Sharper looking math formulas by referencing Wikipedia's PNGs directly
- Feature: Add White background to transparent images for better reading on clients with dark mode
- Feature: Serve media with proper extension, mimetype, for better downloading (easier to tell if something is an animated GIF, etc)